feat: adjust identity API and fix user update profile
